# chessboard_localization

./: CMakeLists.txt  LICENSE  README.md  package.xml
calib/: camera_calib.yml
include/chessboard_localization/: chessboard_localization.h
launch/: demo.launch
rviz_cfg/: chessboard.rviz
script/: run.bash
src/: chessboard_localization.cpp  chessboard_localization_node.cpp
